--- a/Superstore Project.ipynb
+++ b/Superstore Project.ipynb
@@ -5,7 +5,7 @@
    "id": "ddb13f5d",
    "metadata": {},
    "source": [
-    "# Group 6 Superstore Project"
+    "# Superstore Project"
    ]
   },
   {
